--- a/css/style.css
+++ b/css/style.css
@@ -9,34 +9,34 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-	display: block;
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
 ol, ul {
-	list-style: none;
+  list-style: none;
 }
 blockquote, q {
-	quotes: none;
+  quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: "";
-	content: none;
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 /*//////////////////////////////////////////////////////////////////////////////////////////////*/
 
@@ -129,4 +129,15 @@ table, tr, th, td {
 
 .float_left{
     float: left;
+}
+
+@media all and (max-width: 400px) {
+    #board{
+        width: 90vw!important;
+        margin: auto!important;
+    }
+    #content2{
+        margin: auto!important;
+        overflow-x: hidden;
+    }
 }
