--- a/game/chessicons.css
+++ b/game/chessicons.css
@@ -1,45 +1,61 @@
-.chessicons  cg-board piece.bishop.white {
+.chessicons cg-board piece.bishop.white {
     background-image: url('chessicons/wb.svg');
 }
-.chessicons  cg-board piece.king.white {
+
+.chessicons cg-board piece.king.white {
     background-image: url('chessicons/wk.svg');
 }
-.chessicons  cg-board piece.knight.white {
+
+.chessicons cg-board piece.knight.white {
     background-image: url('chessicons/wn.svg');
 }
-.chessicons  cg-board piece.pawn.white {
+
+.chessicons cg-board piece.pawn.white {
     background-image: url('chessicons/wp.svg');
 }
-.chessicons  cg-board piece.queen.white {
+
+.chessicons cg-board piece.queen.white {
     background-image: url('chessicons/wq.svg');
 }
-.chessicons  cg-board piece.rook.white {
+
+.chessicons cg-board piece.rook.white {
     background-image: url('chessicons/wr.svg');
 }
-.chessicons  cg-board piece.bishop.black {
+
+.chessicons cg-board piece.bishop.black {
     background-image: url('chessicons/bb.svg');
 }
-.chessicons  cg-board piece.king.black {
+
+.chessicons cg-board piece.king.black {
     background-image: url('chessicons/bk.svg');
 }
-.chessicons  cg-board piece.knight.black {
+
+.chessicons cg-board piece.knight.black {
     background-image: url('chessicons/bn.svg');
 }
-.chessicons  cg-board piece.pawn.black {
+
+.chessicons cg-board piece.pawn.black {
     background-image: url('chessicons/bp.svg');
 }
-.chessicons  cg-board piece.queen.black {
+
+.chessicons cg-board piece.queen.black {
     background-image: url('chessicons/bq.svg');
 }
-.chessicons  cg-board piece.rook.black {
+
+.chessicons cg-board piece.rook.black {
     background-image: url('chessicons/br.svg');
 }
 
-#boardMoves{
+#boardMoves {
     display: flex;
     flex-wrap: wrap;
+    width: min(25em, 90vw);
 }
 
 #boardButton {
     margin-top: 0!important;
+}
+
+#board {
+    width: min(400px, 90vw);
 }
