--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,7 @@ article {
     float: left;
 }
 
+
 @media only screen and (max-width: 768px) {
     label {
         display: flex;
@@ -237,6 +238,14 @@ article {
 .copyleft {
     display: inline-block;
     transform: rotate(180deg);
+}
+
+.no_border{
+    border: none!important;
+}
+
+.no_border td,tr,th {
+    border: none!important;
 }
 
 #content {
