--- a/game/chessicons.css
+++ b/game/chessicons.css
@@ -1,61 +1,242 @@
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sup,
+tt,
+var,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+/*/////////////////////////////////////////////////////////////////////////////////*/
 .chessicons cg-board piece.bishop.white {
-    background-image: url('chessicons/wb.svg');
+  background-image: url("chessicons/wb.svg");
 }
 
 .chessicons cg-board piece.king.white {
-    background-image: url('chessicons/wk.svg');
+  background-image: url("chessicons/wk.svg");
 }
 
 .chessicons cg-board piece.knight.white {
-    background-image: url('chessicons/wn.svg');
+  background-image: url("chessicons/wn.svg");
 }
 
 .chessicons cg-board piece.pawn.white {
-    background-image: url('chessicons/wp.svg');
+  background-image: url("chessicons/wp.svg");
 }
 
 .chessicons cg-board piece.queen.white {
-    background-image: url('chessicons/wq.svg');
+  background-image: url("chessicons/wq.svg");
 }
 
 .chessicons cg-board piece.rook.white {
-    background-image: url('chessicons/wr.svg');
+  background-image: url("chessicons/wr.svg");
 }
 
 .chessicons cg-board piece.bishop.black {
-    background-image: url('chessicons/bb.svg');
+  background-image: url("chessicons/bb.svg");
 }
 
 .chessicons cg-board piece.king.black {
-    background-image: url('chessicons/bk.svg');
+  background-image: url("chessicons/bk.svg");
 }
 
 .chessicons cg-board piece.knight.black {
-    background-image: url('chessicons/bn.svg');
+  background-image: url("chessicons/bn.svg");
 }
 
 .chessicons cg-board piece.pawn.black {
-    background-image: url('chessicons/bp.svg');
+  background-image: url("chessicons/bp.svg");
 }
 
 .chessicons cg-board piece.queen.black {
-    background-image: url('chessicons/bq.svg');
+  background-image: url("chessicons/bq.svg");
 }
 
 .chessicons cg-board piece.rook.black {
-    background-image: url('chessicons/br.svg');
+  background-image: url("chessicons/br.svg");
+}
+/* /////////////////////////////////////////////////////////////////////////////// */
+footer {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 2.5em;
+  background-color: orange;
+  color: white;
+  justify-content: center;
+  z-index: 3;
 }
 
-#boardMoves {
-    display: flex;
-    flex-wrap: wrap;
-    width: min(25em, 90vw);
+footer p {
+  margin: 2px;
+  padding: 1px;
 }
 
-#boardButton {
-    margin-top: 0!important;
+footer a {
+  text-decoration: none;
+  color: white;
+  margin: 2px;
+  padding: 1px;
+}
+
+footer a:hover {
+  color: navy;
+}
+
+nav {
+  display: flex;
+  justify-content: space-evenly;
+  position: sticky;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  background-color: orange;
+  color: white;
+  text-align: center;
+  z-index: 3;
+  align-items: center;
+  flex-wrap: wrap;
+  line-height: 2.5em;
+}
+
+nav a {
+  text-decoration: none;
+  color: white;
+  margin: 2px;
+  padding: 1px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+nav a:hover {
+  color: navy;
+}
+
+table {
+  border-spacing: inherit;
+  margin: auto;
+}
+
+#content2 {
+  margin: auto;
 }
 
 #board {
-    width: min(400px, 90vw);
+  width: min(400px, 90vw);
+  height: min(320px, 81vw);
+}
+
+@media only screen and (max-width: 768px) {
+  #boardMoves {
+    display: block;
+    margin: auto;
+  }
+
+  #boardButton {
+    margin-top: 0 !important;
+  }
+
+  #board {
+    grid-template-columns: none !important;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: darkcyan;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000;
 }
