--- a/game/chessicons.css
+++ b/game/chessicons.css
@@ -208,7 +208,7 @@ table {
   height: min(320px, 81vw);
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
   #boardMoves {
     display: block;
     margin: auto;
