--- a/css/style.css
+++ b/css/style.css
@@ -60,12 +60,12 @@ time,
 mark,
 audio,
 video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 
 article,
@@ -79,195 +79,199 @@ hgroup,
 menu,
 nav,
 section {
-    display: block;
+  display: block;
 }
 
 body {
-    line-height: 1;
+  line-height: 1;
 }
 
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 blockquote,
 q {
-    quotes: none;
+  quotes: none;
 }
 
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-    content: "";
-    content: none;
+  content: "";
+  content: none;
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
-
 
 /*//////////////////////////////////////////////////////////////////////////////////////////////*/
 
 body {
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 footer {
-    display: flex;
-    align-items: center;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100vw;
-    height: 2.5em;
-    background-color: orange;
-    color: white;
-    justify-content: center;
-    z-index: 3;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 2.5em;
+  background-color: orange;
+  color: white;
+  justify-content: center;
+  z-index: 3;
 }
 
 footer p {
-    margin: 2px;
-    padding: 1px;
+  margin: 2px;
+  padding: 1px;
 }
 
 footer a {
-    text-decoration: none;
-    color: white;
-    margin: 2px;
-    padding: 1px;
+  text-decoration: none;
+  color: white;
+  margin: 2px;
+  padding: 1px;
 }
 
 footer a:hover {
-    color: navy;
+  color: navy;
 }
 
 nav {
-    display: flex;
-    justify-content: space-evenly;
-    position: sticky;
-    left: 0;
-    top: 0;
-    width: 100vw;
-    background-color: orange;
-    color: white;
-    text-align: center;
-    z-index: 3;
-    align-items: center;
-    flex-wrap: wrap;
-    line-height: 2.5em;
+  display: flex;
+  justify-content: space-evenly;
+  position: sticky;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  background-color: orange;
+  color: white;
+  text-align: center;
+  z-index: 3;
+  align-items: center;
+  flex-wrap: wrap;
+  line-height: 2.5em;
 }
 
 nav a {
-    text-decoration: none;
-    color: white;
-    margin: 2px;
-    padding: 1px;
-    padding-top: 2px;
-    padding-bottom: 2px;
+  text-decoration: none;
+  color: white;
+  margin: 2px;
+  padding: 1px;
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 nav a:hover {
-    color: navy;
+  color: navy;
 }
 
 li {
-    list-style: disc;
-    margin-left: 5%;
+  list-style: disc;
+  margin-left: 5%;
 }
 
 pre table {
-    margin: auto;
-    width: fit-content;
+  margin: auto;
+  width: fit-content;
 }
 
 table,
 tr,
 th,
 td {
-    border: solid black 2px;
-    border-collapse: collapse;
-    word-wrap: anywhere;
+  border: solid black 2px;
+  border-collapse: collapse;
+  word-wrap: anywhere;
+}
+
+caption ~ tr th{
+    border: solid black 2px!important;
 }
 
 article {
-    margin: 10px;
+  margin: 10px;
 }
 
 .float_left {
-    float: left;
+  float: left;
 }
 
-
 @media only screen and (max-width: 768px) {
-    label {
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .float_left {
-        float: none;
-    }
-    #left_content ul li {
-        display: inline-flex!important;
-    }
-    #left_content ul li {
-        list-style: none!important;
-    }
-    article {
-        margin: 0;
-    }
-    #left_content {
-        width: fit-content!important;
-    }
-    #content {
-        width: fit-content!important;
-        margin: auto!important;
-    }
-    #content * {
-        word-wrap: break-word;
-    }
-    .not_mobile {
-        display: none!important;
-    }
+  label {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .float_left {
+    float: none;
+  }
+  #left_content ul li {
+    display: inline-flex !important;
+  }
+  #left_content ul li {
+    list-style: none !important;
+  }
+  article {
+    margin: 0;
+  }
+  #left_content {
+    width: fit-content !important;
+  }
+  #content {
+    width: fit-content !important;
+    margin: auto !important;
+  }
+  #content * {
+    word-wrap: break-word;
+  }
+  .not_mobile {
+    display: none !important;
+  }
 }
 
 .copyleft {
-    display: inline-block;
-    transform: rotate(180deg);
+  display: inline-block;
+  transform: rotate(180deg);
 }
 
-.no_border{
-    border: none!important;
+.no_border {
+  border: none;
 }
 
-.no_border td,tr,th {
-    border: none!important;
+.no_border td,
+tr,
+th {
+  border: none !important;
 }
 
 #content {
-    margin-top: 15px !important;
-    margin: auto;
-    width: 60vw;
+  margin-top: 15px !important;
+  margin: auto;
+  width: 60vw;
 }
 
 #content2 {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 #left_content {
-    margin-top: 15px;
-    padding-left: 1.5em;
-    width: 20vw;
+  margin-top: 15px;
+  padding-left: 1.5em;
+  width: 20vw;
 }
 
 #left_content ul li {
-    list-style: disc;
+  list-style: disc;
 }
 
 #pre {
-    margin-top: 15px;
+  margin-top: 15px;
 }
