--- a/game/chessicons.css
+++ b/game/chessicons.css
@@ -147,7 +147,12 @@ td,tr,th,table{
     width: fit-content;
 }
 
-footer {
+body {
+    overflow-x: hidden;
+    background-color: #C3DF5D;
+  }
+  
+  footer {
     display: flex;
     align-items: center;
     position: fixed;
@@ -155,57 +160,45 @@ footer {
     bottom: 0;
     width: 100vw;
     height: 2.5em;
-    background-color: orange;
+    background-color: #66b032;
     color: white;
     justify-content: center;
     z-index: 3;
-}
-
-footer p {
+  }
+  
+  footer p {
+    color: #375f1b;
     margin: 2px;
     padding: 1px;
-}
-
-footer a {
+  }
+  
+  a {
     text-decoration: none;
-    color: white;
+    color: #375f1b;
     margin: 2px;
     padding: 1px;
-}
-
-footer a:hover {
-    color: navy;
-}
-
-nav {
+  }
+  
+  a:hover {
+    color: #1B3409;
+  }
+  
+  nav {
     display: flex;
     justify-content: space-evenly;
     position: sticky;
     left: 0;
     top: 0;
     width: 100vw;
-    background-color: orange;
-    color: white;
+    background-color: #66b032;
+    color: #375f1b;
     text-align: center;
     z-index: 3;
     align-items: center;
     flex-wrap: wrap;
     line-height: 2.5em;
-}
-
-nav a {
-    text-decoration: none;
-    color: white;
-    margin: 2px;
-    padding: 1px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-}
-
-nav a:hover {
-    color: navy;
-}
-
+  }
+  
 table {
     border-spacing: inherit;
     margin: auto;
