--- a/game/chessicons.css
+++ b/game/chessicons.css
@@ -138,6 +138,11 @@ body {
 
 /* /////////////////////////////////////////////////////////////////////////////// */
 
+* {
+  word-break: break-all;
+  overflow-wrap: break-word;
+}
+
 td,
 tr,
 th,
