--- a/css/style.css
+++ b/css/style.css
@@ -271,17 +271,19 @@ th {
   .float_left {
     float: none;
   }
-  #left_content ul li {
-    display: inline-flex !important;
+  #left_content ul {
+    display: flex;
   }
   #left_content ul li {
-    list-style: none !important;
+    list-style: none;
+    margin: 0;
+    margin-left: 5px;
   }
   article {
     margin: 0;
   }
   #left_content {
-    width: fit-content !important;
+    width: 100vw;
   }
 
   #left_content2 {
@@ -292,7 +294,7 @@ th {
   }
 
   #content {
-    width: fit-content !important;
+    width: fit-content;
     margin: auto !important;
   }
   #content * {
