--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,10 @@ table {
 
 /*//////////////////////////////////////////////////////////////////////////////////////////////*/
 
+* {
+  max-width: 100vw;
+}
+
 body {
   overflow-x: hidden;
   background-color: #c3df5d;
