--- a/css/style.css
+++ b/css/style.css
@@ -110,14 +110,21 @@ table {
 }
 
 /*//////////////////////////////////////////////////////////////////////////////////////////////*/
-
+:root {
+  --document_background: #c3df5d;
+  --document_font_color: #b2d732;
+  --document_footer: #092834;
+  --documnt_link: #66b032;
+  --document_link_hover: #347b98;
+  --document_content_background:#f0f7d4
+}
 * {
   max-width: 100vw;
 }
 
 body {
   overflow-x: hidden;
-  background-color: #c3df5d;
+  background-color: var(--document_background);
 }
 
 footer {
@@ -128,14 +135,14 @@ footer {
   bottom: 0;
   width: 100vw;
   height: 2.5em;
-  background-color: #092834;
+  background-color: var(--document_footer);
   color: white;
   justify-content: center;
   z-index: 3;
 }
 
 footer * {
-  color: #b2d732;
+  color: var(--document_font_color);
   margin: 2px;
   padding: 1px;
 }
@@ -143,13 +150,13 @@ footer * {
 a {
   font-weight: bolder;
   text-decoration: none;
-  color: #66b032;
+  color: var(--documnt_link);
   margin: 2px;
   padding: 1px;
 }
 
 a:hover {
-  color: #347b98;
+  color: var(--document_link_hover);
 }
 
 nav {
@@ -159,8 +166,8 @@ nav {
   left: 0;
   top: 0;
   width: 100vw;
-  background-color: #092834;
-  color: #b2d732;
+  background-color: var(--document_footer);
+  color: var(--document_font_color);
   text-align: center;
   z-index: 3;
   align-items: center;
@@ -213,7 +220,7 @@ th {
 #content2,
 #left_content,
 #right_content {
-  background-color: #f0f7d4;
+  background-color: var(--document_content_background);
 }
 
 #content {
