--- a/player_data/player_data.css
+++ b/player_data/player_data.css
@@ -6,25 +6,38 @@ p[style="text-align: center;"] {
   border: 1px solid black;
 }
 
-details {
+details[open] summary {
+  list-style: "▼";
+}
+
+details:not([open]) summary {
+  list-style: "▶";
+}
+
+.details {
   text-align: left;
 }
 
-summary {
-  font-family: "Courier New";
+.details summary {
+  display: flex;
+  justify-content: space-between;
 }
 
-details table {
+.details[open] summary::before {
+  content: "▼";
+}
+
+.details:not([open]) summary::before {
+  content: "▶";
+}
+
+.details table {
   width: 100% !important;
   border-collapse: collapse;
 }
 
-details td {
+.details td {
   padding: 0;
-}
-.space {
-  padding-left: 2.5em;
-  padding-right: 2.5em;
 }
 
 #cr-data {
