--- a/css/search.css
+++ b/css/search.css
@@ -1,14 +1,18 @@
-.not_mobile {
+div.not_mobile {
   width: 30vw;
   background-color: #c3df5d;
 }
 #content {
   width: fit-content;
-  float: inline-start;
 }
 
 #right_content {
   margin-top: 0;
+}
+
+#games {
+  clear: both;
+  width: 100vw;
 }
 
 @media only screen and (max-width: 768px) {
