--- a/css/player_data.css
+++ b/css/player_data.css
@@ -50,9 +50,9 @@ details:not([open]) summary {
   width: 100px;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 768px) {
   #container {
-    flex-direction: column;
+    flex-direction: column !important;
   }
 
   img {
