--- a/css/chessicons.css
+++ b/css/chessicons.css
@@ -1,93 +1,3 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sup,
-tt,
-var,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-/*/////////////////////////////////////////////////////////////////////////////////*/
-
 .chessicons cg-board piece.bishop.white {
   background-image: url("chessicons/wb.svg");
 }
@@ -222,95 +132,13 @@ span {
 /* /////////////////////////////////////////////////////////////////////////////// */
 :root {
   --document_background: #c3df5d;
-  --document_font_color: #b2d732;
-  --document_footer: #092834;
-  --document_link: #66b032;
-  --document_link_hover: #347b98;
   --document_content_background: #f0f7d4;
-  --document_active: #04aa6d;
-}
-
-* {
-  word-break: break-all;
-  overflow-wrap: break-word;
-}
-
-td,
-tr,
-th,
-table {
-  margin: 0;
-  padding: 0;
-  height: fit-content;
-  width: fit-content;
 }
 
 body {
   overflow-x: hidden;
   background-color: var(--document_background);
-  width: 100vw;
-}
-
-footer {
-  display: flex;
-  align-items: center;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100vw;
-  height: 2.5em;
-  background-color: var(--document_footer);
-  color: white;
-  justify-content: center;
-  z-index: 3;
-}
-
-footer * {
-  color: var(--document_font_color);
-  margin: 2px;
-  padding: 1px;
-}
-
-a {
-  font-weight: bolder;
-  text-decoration: none;
-  color: var(--documnt_link);
-  margin: 2px;
-  padding: 1px;
-}
-
-a:hover {
-  color: var(--document_link_hover);
-}
-
-p a {
-  color: #37700f;
-}
-
-nav {
-  display: flex;
-  justify-content: space-evenly;
-  position: sticky;
-  left: 0;
-  top: 0;
-  width: 100vw;
-  background-color: var(--document_footer);
-  color: var(--document_font_color);
-  text-align: center;
-  z-index: 3;
-  align-items: center;
-  flex-wrap: wrap;
-  line-height: 2.5em;
-}
-
-table {
-  border-spacing: inherit;
-  margin: auto;
-}
-
-.copyleft {
-  display: inline-block;
-  transform: rotate(180deg);
+  width: 100%;
 }
 
 #content2 {
@@ -352,105 +180,35 @@ table {
   outline: none;
 }
 
-@media only screen and (max-width: 768px) {
-  * {
-    word-break: keep-all;
-    overflow-wrap: normal;
-    max-width: 100vw;
-  }
-  nav ul,
-  nav li {
-    list-style-type: none;
-    width: 100vw;
-  }
-  label {
+#content2 {
+  width: 0 !important;
+}
+
+@media only screen and (max-width: 767px) {
+  #content3 {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
   }
-  .float_left {
-    float: none;
+  #buttonContainer {
+    display: grid;
+    gap: 0;
+    grid-template-columns: min-content min-content;
   }
-  #left_content {
-    width: 100vw;
+  #first {
+    grid-row: 2;
+    grid-column: 1;
   }
-  #left_content ul {
-    display: flex;
+  #previous {
+    grid-row: 1;
+    grid-column: 1;
   }
-  #left_content ul li {
-    list-style: none;
-    margin: 0;
-    margin-left: 5px;
-  }
-  article {
-    margin: 0;
-  }
-  #left_content {
-    width: 100vw;
+  #next {
+    grid-row: 1;
+    grid-column: 2;
   }
 
-  #left_content2 {
-    margin-top: 15px;
-    padding-left: 1.5em;
-    width: fit-content !important;
-    height: fit-content;
+  #last {
+    grid-row: 2;
+    grid-column: 2;
   }
-
-  #content {
-    width: fit-content;
-    margin: auto !important;
-  }
-  #content * {
-    word-wrap: break-word;
-  }
-  .not_mobile {
-    display: none !important;
-  }
-  #searchContainer {
-    display: block;
-  }
-  .desktop {
-    display: none;
-  }
-}
-
-@media only screen and (min-width: 769px) {
-  nav,
-  nav * {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 0;
-  }
-
-  nav ul {
-    list-style-type: none;
-    overflow: hidden;
-    background-color: #333;
-    width: 100%;
-    height: fit-content;
-    display: flex;
-    justify-content: space-evenly;
-  }
-
-  nav li {
-    float: left;
-    list-style-type: none;
-  }
-
-  .mobile {
-    display: none;
-  }
-}
-
-nav li a {
-  display: block;
-  color: white;
-  text-align: center;
-  text-decoration: none;
-}
-
-nav li:not(.active) a:hover {
-  background-color: #111;
-}
-nav .active {
-  background-color: var(--document_active);
 }
