--- a/css/search.css
+++ b/css/search.css
@@ -12,7 +12,7 @@ div.not_mobile {
 
 #games {
   clear: both;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
 }
@@ -22,6 +22,6 @@ div.not_mobile {
   #right_content {
     padding: 0 !important;
     margin: 0 !important;
-    width: 100vw !important;
+    width: 100% !important;
   }
 }
