--- a/css/style.css
+++ b/css/style.css
@@ -1,115 +1,3 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sup,
-tt,
-var,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol,
-ul {
-  list-style: none;
-}
-
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/*//////////////////////////////////////////////////////////////////////////////////////////////*/
 :root {
   --document_background: #c3df5d;
   --document_font_color: #b2d732;
@@ -134,7 +22,7 @@ footer {
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 100vw;
+  width: 100%;
   height: 2.5em;
   background-color: var(--document_footer);
   color: white;
@@ -166,7 +54,7 @@ nav {
   position: sticky;
   left: 0;
   top: 0;
-  width: 100vw;
+  width: 100%;
   background-color: var(--document_footer);
   color: var(--document_font_color);
   text-align: center;
@@ -283,12 +171,11 @@ th {
   * {
     word-break: keep-all;
     overflow-wrap: normal;
-    max-width: 100vw;
   }
   nav ul,
   nav li {
     list-style-type: none;
-    width: 100vw;
+    width: 100%;
   }
   label {
     display: flex;
@@ -296,9 +183,6 @@ th {
   }
   .float_left {
     float: none;
-  }
-  #left_content {
-    width: 100vw;
   }
   #left_content ul {
     display: flex;
@@ -312,7 +196,11 @@ th {
     margin: 0;
   }
   #left_content {
-    width: 100vw;
+    width: 100%;
+  }
+
+  #left_content ul li:not(:last-of-type)::after {
+    content: ",";
   }
 
   #left_content2 {
@@ -373,6 +261,7 @@ nav li a {
   color: white;
   text-align: center;
   text-decoration: none;
+  font-weight: lighter;
 }
 
 nav li:not(.active) a:hover {
@@ -380,4 +269,12 @@ nav li:not(.active) a:hover {
 }
 nav .active {
   background-color: var(--document_active);
+}
+
+nav details[open] summary::marker {
+  content: "X";
+}
+
+nav details:not([open]) summary::marker {
+  content: "\2630";
 }
