--- a/css/chessicons.css
+++ b/css/chessicons.css
@@ -67,6 +67,7 @@ span {
 #boardButton {
   display: flex;
   justify-content: center;
+  margin: 0;
 }
 
 #boardMoves {
@@ -79,9 +80,6 @@ span {
   height: min(320px, 81vw);
 }
 
-#boardButton {
-  margin: 20px;
-}
 @media only screen and (min-width: 768px) {
   #boardMoves {
     height: min(320px, 81vw);
@@ -118,7 +116,7 @@ span {
   #boardMoves {
     height: fit-content;
     grid-column: 1/2;
-    grid-row: 5/6;
+    grid-row: 7/8;
     margin-left: 0;
     padding-bottom: 2.5em;
   }
@@ -178,6 +176,23 @@ body {
 
 *:focus {
   outline: none;
+}
+
+.comment {
+  display: none;
+}
+
+.buttons {
+  grid-column: 1/2 !important;
+}
+
+#editboardButton {
+  display: none;
+}
+
+#boardButton {
+  display: flex;
+  justify-content: center;
 }
 
 #content2 {
