--- a/app/views/game.html
+++ b/app/views/game.html
@@ -11,5 +11,17 @@
 <div id="pre" class="merida zeit" onkeydown="event.preventDefault()">
   <div id="content2">
     <div id="board"></div>
+    <div id="engine_container">
+      <h2 class="inactive">stockfish</h2>
+      <p id="depth_p">głębokość: <span id="depth"></span></p>
+      <p id="eval_p">ocena: <span id="eval"></span></p>
+      <p>
+        najlepszy ruch:
+        <span id="bestmove"></span>
+      </p>
+      <p id="first_v"></p>
+      <p id="second_v"></p>
+      <p id="third_v"></p>
+    </div>
   </div>
 </div>
