--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,6 @@
   max-width: 100vw;
 }
 
-body {
-  overflow-x: hidden;
-  background-color: var(--document_background);
-}
-
 footer {
   display: flex;
   align-items: center;
@@ -167,11 +162,21 @@ th {
   flex-direction: row;
 }
 
+body {
+  background-color: var(--document_background);
+  touch-action: manipulation;
+}
+
 @media only screen and (max-width: 768px) {
   * {
     word-break: keep-all;
     overflow-wrap: normal;
   }
+
+  body {
+    overflow-x: hidden;
+  }
+
   nav ul,
   nav li {
     list-style-type: none;
@@ -184,8 +189,13 @@ th {
   .float_left {
     float: none;
   }
+  #left_content * {
+    width: fit-content;
+  }
   #left_content ul {
     display: flex;
+    width: fit-content;
+    overflow-x: hidden;
   }
   #left_content ul li {
     list-style: none;
@@ -196,7 +206,8 @@ th {
     margin: 0;
   }
   #left_content {
-    width: 100%;
+    width: calc(100% - 24px);
+    max-width: 100vw;
   }
 
   #left_content ul li:not(:last-of-type)::after {
@@ -278,3 +289,4 @@ nav details[open] summary::marker {
 nav details:not([open]) summary::marker {
   content: "\2630";
 }
+
