--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,71 @@
 :root {
   --document_background: #c3df5d;
-  --document_font_color: #b2d732;
+  --document_font_color: black;
   --document_footer: #092834;
   --document_link: #66b032;
   --document_link_hover: #347b98;
   --document_content_background: #f0f7d4;
   --document_active: #04aa6d;
+  --even-row: lemonchiffon;
+  --odd-row: lightcyan;
 }
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --document_background: #1c1f29;
+    --document_font_color: #f2f2f2;
+    --document_footer: #2f3645;
+    --document_link: #0d6974;
+    --document_link_hover: #12c5e0;
+    --document_content_background: #262c3a;
+    --document_active: #3e4e6e;
+    --even-row: #444444;
+    --odd-row: #333333;
+  }
+
+  input {
+    background-color: black;
+    color: white;
+  }
+
+  option,
+  select {
+    background-color: black;
+    color: white;
+  }
+
+  input[type="checkbox"] + label::before,
+  input[type="radio"] + label::before {
+    background-color: black;
+  }
+
+  #boardButton span {
+    background-color: black !important;
+  }
+
+  img#graph {
+    filter: invert(100%) hue-rotate(100deg);
+  }
+}
+
+button:disabled {
+  filter: grayscale(1);
+  cursor: not-allowed;
+}
+
+button {
+  background-color: var(--document_link);
+  color: var(--document_font_color);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
 * {
   max-width: 100vw;
+  color: var(--document_font_color);
 }
 
 footer {
@@ -290,3 +347,10 @@ nav details:not([open]) summary::marker {
   content: "\2630";
 }
 
+#table tr:nth-child(2n) {
+  background-color: var(--even-row);
+}
+
+#table tr:nth-child(2n + 1) {
+  background-color: var(--odd-row);
+}
